--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,22 +11,10 @@ body {
   height: 100%;
 }
 
+.hexagon {
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+}
+
 .bg {
-  background-image: linear-gradient(
-    45deg,
-    hsl(176deg 96% 69%) 0%,
-    hsl(176deg 88% 65%) 11%,
-    hsl(176deg 79% 62%) 19%,
-    hsl(176deg 70% 58%) 26%,
-    hsl(177deg 61% 54%) 32%,
-    hsl(176deg 53% 51%) 37%,
-    hsl(177deg 44% 47%) 42%,
-    hsl(181deg 38% 42%) 47%,
-    hsl(189deg 36% 36%) 51%,
-    hsl(196deg 32% 30%) 56%,
-    hsl(204deg 29% 23%) 61%,
-    hsl(214deg 26% 17%) 66%,
-    hsl(222deg 23% 11%) 75%,
-    hsl(228deg 20% 5%) 97%
-  );
+  background-color: #253f59;
 }
