--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,19 +11,10 @@ body {
   height: 100%;
 }
 
-.hexagon {
-  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+body {
+  overflow-x: hidden;
 }
-/* .bg {
-  background: linear-gradient(
-    90deg,
-    #09203f,
-    #142b4b,
-    #1e3757,
-    #284463,
-    #32506f,
-    #3d5d7c,
-    #486a88,
-    #537895
-  );
-} */
+
+.modal {
+  width: calc(100vw - 15px);
+}
