--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ html,
 body,
 #__next {
   height: 100%;
+  --scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 
 body {
