--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,9 @@ body {
 .modal {
   width: calc(100vw - 15px);
 }
+
+@layer utilities {
+  .heading {
+    @apply text-2xl lg:text-4xl text-gray-700 text-center;
+  }
+}
